<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="ef_camera">CAMERA</string>
    <string name="ef_done">DONE</string>
    <string name="ef_error_create_image_file">Failed to create image file</string>
    <string name="ef_error_no_camera">No camera found</string>
    <string name="ef_error_null_cursor">Oops, something went wrong!</string>
    <string name="ef_ltitle_permission_denied">Permission denied</string>
    <string name="ef_msg_empty_images">No images found</string>
    <string name="ef_msg_limit_images">Image selection limit</string>
    <string name="ef_msg_no_camera_permission">Please grant camera permission to capture image</string>
    <string name="ef_msg_no_write_external_permission">Please grant storage permission to select images</string>
    <string name="ef_ok">OK</string>
    <string name="ef_permission_write_external_rationale">Allow access external storage to select images</string>
    <string name="ef_selected">%d selected</string>
    <string name="ef_selected_with_limit">%1$d/%2$d selected</string>
    <string name="ef_title_folder">Folder</string>
    <string name="ef_title_select_image">Tap to select images</string>
    <string name="com_kakao_account_cancel">Cancel</string>
    <string name="com_kakao_account_cancel_tts">Cancel, Button</string>
    <string name="com_kakao_alert_appKey">need to declare com.kakao.sdk.AppKey in your AndroidManifest.xml</string>
    <string name="com_kakao_alert_install_kakaotalk">There is no installed KakaoTalk version higher than 4.2.0</string>
    <string name="com_kakao_cancel_button">Cancel</string>
    <string name="com_kakao_confirm_logout">Are you sure to log out from this app?</string>
    <string name="com_kakao_confirm_unlink">Are you sure to unlink from this app?</string>
    <string name="com_kakao_kakaostory_account">with KakaoStory</string>
    <string name="com_kakao_kakaostory_account_tts">with KakaoStory, Button</string>
    <string name="com_kakao_kakaotalk_account">with KakaoTalk</string>
    <string name="com_kakao_kakaotalk_account_tts">with KakaoTalk, Button</string>
    <string name="band_setting_unlock_description_01">밴드를 연결하여 화면 잠금 해제 사용</string>
    <string name="band_setting_unlock_description_02">캐시워치와 스마트폰의 블루투스 연결을 유지하십시오</string>
    <string name="band_setting_unlock_go_to_setup">설정으로 이동</string>
    <string name="band_setting_unlock_how_to">설정방법</string>
    <string name="band_setting_unlock_how_to_description">"1. [설정] > [보안]으로 이동
2. 설정화면 잠금해제
3. 스마트 잠금을 탭하여 밴드로 휴대전화 잠금해제"</string>
    <string name="birthday">생일</string>
    <string name="confirm">확인</string>
    <string name="female">여자</string>
    <string name="finish_tutorial">사용방법 그만보기</string>
    <string name="gender">성별</string>
    <string name="justgo_login_msg">"'그냥사용해보기'로 가입시
추천인은 입력하실 수 없습니다."</string>
    <string name="justgo_select_login">다른 방법으로 로그인 하기</string>
    <string name="lockscreen_change_bg">배경 사진 바꾸기</string>
    <string name="lockscreen_change_coach">코치 사진 바꾸기</string>
    <string name="lockscreen_off">잠금화면 사용하기</string>
    <string name="main_coupon_go">쿠폰함 가기</string>
    <string name="main_coupon_review">"캐시워크에 만족하셨나요?
"</string>
    <string name="main_coupon_review_go">평점 남기고 좋은일 생기기</string>
    <string name="main_coupon_success">결제성공</string>
    <string name="main_coupon_success_desc">"결제하신 제품의 쿠폰을
쿠폰함에 넣어드렸습니다."</string>
    <string name="main_review_please">"좋은 평점 하나만 남겨주시면
더 좋은 일들이 생길거예요!"</string>
    <string name="male">남자</string>
    <string name="nickname">이름</string>
    <string name="profile_image">프로필 사진</string>
    <string name="profile_info">프로필 정보</string>
    <string name="send_feedback">불편사항 신고하기</string>
    <string name="setting_faq">자주하는질문</string>
    <string name="settings_category_app">앱 정보</string>
    <string name="settings_category_lockscreen">잠금화면 관리</string>
    <string name="settings_category_profile">개인 정보</string>
    <string name="settings_lockscreen_news">뉴스 보기</string>
    <string name="settings_lockscreen_sound">효과음</string>
    <string name="settings_lockscreen_vibration">진동</string>
    <string name="settings_lockscreen_weather">날씨 보기</string>
    <string name="signup_gender_desc">"%s님,
성별과 생일을 입력해주세요."</string>
    <string name="signup_gender_title">성별, 생일 설정하기</string>
    <string name="signup_profile_desc">"안녕하세요 %s님!
프로필 사진과 이름을 입력해주세요."</string>
    <string name="signup_profile_input_edit">이름을 입력해주세요</string>
    <string name="signup_profile_title">프로필 설정하기</string>
    <string name="stepbet_stat_dropout">%s님은 아쉽게도 탈락하셨습니다.</string>
    <string name="stepbet_stat_dropout_continue">%s캐시를 사용해서 다시 시도해 보시겠습니까?</string>
    <string name="stepbet_stat_dropout_out">"그만
하기"</string>
    <string name="stepbet_stat_dropout_retry">"다시
도전"</string>
    <string name="tab_setting">설정</string>
    <string name="update_version">최신버전으로 업데이트</string>
</resources>