<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/fl_go_setup" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="15.0sp" android:textColor="#ff5e5050" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/band_setting_unlock_go_to_setup" />
    </FrameLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="56.0dip" android:layout_marginRight="56.0dip" android:layout_above="@id/fl_go_setup">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="200.0dip" android:layout_height="200.0dip" android:src="@drawable/img_unlocksetting" />
        <TextView android:textSize="12.0sp" android:textColor="#de383838" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/band_setting_unlock_description_01" />
        <TextView android:textSize="10.0sp" android:textColor="#ffc7c7c7" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/band_setting_unlock_description_02" />
        <TextView android:textSize="15.0sp" android:textColor="#debbbbbb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="69.0dip" android:text="@string/band_setting_unlock_how_to" />
        <TextView android:textSize="15.0sp" android:textColor="#dec7c7c7" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/band_setting_unlock_how_to_description" />
    </LinearLayout>
</RelativeLayout>