<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/black_filter" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="72.0dip" android:layout_marginRight="32.0dip" android:layout_alignParentTop="true">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signup_gender_title" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/nickname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/signup_gender_desc" />
        </LinearLayout>
        <LinearLayout android:gravity="center|left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="32.0dip" android:layout_above="@id/next" android:layout_below="@id/top">
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gender" />
            <RadioGroup android:orientation="horizontal" android:id="@id/gender" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <RadioButton android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/male" android:background="@drawable/selector_bg_gender" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginRight="8.0dip" android:button="@null" android:text="@string/male" android:layout_weight="0.5" />
                <RadioButton android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/female" android:background="@drawable/selector_bg_gender" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginLeft="8.0dip" android:button="@null" android:text="@string/female" android:layout_weight="0.5" />
            </RadioGroup>
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/birthday" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/birthday" android:background="@color/black_50" android:padding="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="8.0dip" />
        </LinearLayout>
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/next" android:background="@drawable/selector_bg_next" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/confirm" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</FrameLayout>