<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/black_filter" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@id/tv_justogo_info_msg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/justgo_login_msg" />
                <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_justogo_info_btn" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/justgo_select_login" android:layout_below="@id/tv_justogo_info_msg" android:layout_alignParentStart="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="32.0dip" android:layout_below="@id/tv_justogo_info_btn">
                    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signup_profile_title" />
                    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/nickname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/signup_profile_desc" />
                </LinearLayout>
                <LinearLayout android:gravity="center|left|top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="32.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="32.0dip" android:layout_below="@id/top">
                    <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/profile_image" />
                    <ImageButton android:layout_gravity="center_horizontal" android:id="@id/profile" android:background="@null" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/ic_camera" android:scaleType="centerCrop" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/nickname" />
                    <EditText android:textSize="18.0sp" android:textColor="@color/white" android:textColorHint="@color/text_gray" android:gravity="center" android:id="@id/nicknameEdit" android:background="@color/black_50" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="72.0dip" android:hint="@string/signup_profile_input_edit" android:maxLines="1" android:lines="1" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/next" android:background="@drawable/selector_bg_next" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/confirm" android:layout_alignParentBottom="true" />
    <ProgressBar android:layout_gravity="center" android:id="@id/progress" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" />
</RelativeLayout>